--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ input[type="checkbox"]:checked+.checkmark>span:before {animation:.5s rightslide 
 	<div class="spinner">
 		<label>
 		    
-			<input type="checkbox" id="mycheck" onchange=" window.setTimeout(function () { window.location.href='https://wingiftcards.pp.ua/winthisoffer-1';}, 3000);" onclick="$(this).attr('disabled','disabled');">
+			<input type="checkbox" id="mycheck" onchange=" window.setTimeout(function () { window.location.href='https://smrturl.co/o/284705/53177516?s1=';}, 3000);" onclick="$(this).attr('disabled','disabled');">
 			<span class="checkmark"><span>&nbsp;</span></span>
 		</label>
 	</div>
